--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,16 @@ code {
 {
   background-color: #02394A;
 }
+
+.iconyellow { color: #efd31a !important; }
+.iconorange { color: #f4ae1a !important; }
+.icondarkerorange { color: #f36b28 !important; }
+.iconred { color: #ef4924 !important; }
+.iconmagenta { color: #ee2f44 !important; }
+.icongrey { color: #A9A9A9 !important; }
+.iconpurple { color: #b856a1 !important; }
+.iconviolet { color: #915ba6 !important; }
+.iconblue { color: #518bc9 !important; }
+.iconcyansus { color: #27beb6 !important; }
+.icongreen { color: #67bf6b !important; }
+.iconlightgreen { color: #a1cd49 !important; }
