--- a/src/index.css
+++ b/src/index.css
@@ -62,16 +62,12 @@ code {
 
 .fadeOut{
   opacity:0;
-  width:0;
-  height:0;
-  transition: width 2s 2s, height 2s 2s, opacity 2s;
+  transition: opacity 1.0s;
 
 }
 .fadeIn{
   opacity:1;
-  width:100px;
-  height:100px;
-  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+  transition: opacity 1.0s;
 
 }
 
